--- a/Source/workspace/PARROT/res/layout/speechboard_layout.xml
+++ b/Source/workspace/PARROT/res/layout/speechboard_layout.xml
@@ -8,7 +8,8 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="975dp"
+        android:layout_height="0dp"
+        android:layout_weight="3"
         android:layout_marginBottom="5dp"
         android:orientation="horizontal" >
 
@@ -64,20 +65,23 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="17dp"
+        android:layout_weight="1"
         android:background="@drawable/sentenceboardlayout" 
         android:id ="@+id/sentenceboardlinearhelper">
-              <GridView
-                android:id="@+id/sentenceboard"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:columnWidth="90dp"
-                android:gravity="center"
-                android:layout_gravity="left"
-                android:horizontalSpacing="5dp"
-                android:numColumns="4"
-                android:stretchMode="columnWidth"
-                android:verticalSpacing="5dp" />
+
+        <GridView
+            android:id="@+id/sentenceboard"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:columnWidth="90dp"
+            android:gravity="center"
+            android:horizontalSpacing="5dp"
+            android:numColumns="4"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="5dp" >
+        </GridView>
+
     </LinearLayout>
 
 
