--- a/Source/workspace/PARROT/res/layout/options_layout.xml
+++ b/Source/workspace/PARROT/res/layout/options_layout.xml
@@ -21,10 +21,10 @@
         android:id="@+id/changesentencecolor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:background="@drawable/button"
         android:radius="7dp"
         android:text="@string/changesentencecolor"
-        android:textSize="14dp"
-        android:layout_margin="5dp"/>
+        android:textSize="14dp" />
     
 </LinearLayout>
