--- a/Source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
+++ b/Source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
@@ -13,4 +13,14 @@
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
 
+    <Button
+        android:id="@+id/search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="51dp"
+        android:layout_marginRight="75dp"
+        android:text="@string/search_button" />
+
 </RelativeLayout>
