--- a/Source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
+++ b/Source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
@@ -2,25 +2,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".PictoAdminMain" >
 
-    <TextView
+    <EditText
+        android:id="@+id/text_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/search_button"
+        android:layout_marginTop="39dp"
+        android:hint="@string/text_input"
+        android:ems="10" />
 
     <Button
         android:id="@+id/search_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="51dp"
-        android:layout_marginRight="75dp"
+        android:layout_below="@id/text_input"
+        android:layout_marginRight="26dp"
+        android:layout_marginTop="25dp"
         android:text="@string/search_button" />
 
 </RelativeLayout>
