--- a/Source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
+++ b/Source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
@@ -25,4 +25,13 @@
         android:layout_marginTop="25dp"
         android:text="@string/search_button" />
 
+    <Button
+        android:id="@+id/random_placeholder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/search_button"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="120dp"
+        android:text="Placeholder" />
+
 </RelativeLayout>
