--- a/Source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
+++ b/Source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
@@ -22,11 +22,10 @@
         </EditText>
 
         <GridView
-            android:id="@+id/gridView1"
+            android:id="@+id/searched_pictograms"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:numColumns="3" >
-
         </GridView>
 
     </LinearLayout>
