--- a/Source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
+++ b/Source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
@@ -5,72 +5,160 @@
     android:keepScreenOn="true"
     tools:context=".PictoAdminMain" >
 
+    <ListView
+        android:id="@+id/listView1"
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="0.2" >
+    </ListView>
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical" >
 
-        <EditText
-            android:id="@+id/editText1"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:inputType="text"
-            android:ems="10" >
+            android:layout_gravity="right"
+            android:gravity="right" >
 
-            <requestFocus />
-        </EditText>
+            <TextView
+                android:id="@+id/saveTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/save_changes"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <ImageButton
+                android:id="@+id/saveButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/content_save"
+                android:contentDescription="@string/save_changes" />
+
+            <TextView
+                android:id="@+id/deleteTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/delete"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <ImageButton
+                android:id="@+id/deleteButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/content_discard"
+                android:contentDescription="@string/delete" />
+
+            <TextView
+                android:id="@+id/cancelTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cancel"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <ImageButton
+                android:id="@+id/cancelButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/navigation_cancel"
+                android:contentDescription="@string/cancel" />
+
+            <TextView
+                android:id="@+id/helpTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/help"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <ImageButton
+                android:id="@+id/helpButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:src="@drawable/action_help"
+                android:contentDescription="@string/help" />
+
+        </LinearLayout>
 
         <GridView
             android:id="@+id/searched_pictograms"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:numColumns="3" >
+            android:layout_height="fill_parent"
+            android:numColumns="5" >
         </GridView>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight=".2"
         android:orientation="vertical" >
 
-        <EditText
-            android:id="@+id/text_input"
-            android:layout_width="wrap_content"
+        <Spinner
+            android:id="@+id/select_search_field"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:ems="10"
-            android:hint="@string/text_input"
-            android:inputType="text"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="20sp" />
+            android:entries="@array/select_search_field" />
 
-        <Button
-            android:id="@+id/search_button"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:text="@string/search_button" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp" >
+
+            <EditText
+                android:id="@+id/text_input"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:hint="@string/text_input"
+                android:inputType="text"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="20sp" />
+
+            <ImageButton
+                android:id="@+id/search_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/search_button"
+                android:src="@drawable/ic_action_search" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/Kategori"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
             android:text="@string/kategori" />
 
         <Button
             android:id="@+id/underKategori"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
             android:text="@string/subKategori" />
 
         <Button
-            android:id="@+id/Title"
-            android:layout_width="fill_parent"
+            android:id="@+id/addExistingButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/add_existing_pictogram" />
+
+        <Button
+            android:id="@+id/Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
             android:text="@string/create_new_pictogram" />
     </LinearLayout>
