--- a/Source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
+++ b/Source/workspace/PictoAdmin/res/layout/activity_picto_admin_main.xml
@@ -2,15 +2,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="5dp"
     android:keepScreenOn="true"
     tools:context=".PictoAdminMain" >
 
-    <ListView
-        android:id="@+id/listView1"
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="fill_parent"
-        android:layout_weight="0.2" >
+        android:layout_height="match_parent"
+        android:layout_weight="0.2"
+        android:orientation="vertical" >
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+        	android:layout_height="50dp"
+        	android:orientation="horizontal">
+
+            <ImageButton
+                android:id="@+id/backButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/back"
+                android:src="@drawable/navigation_back" />
+
+            <ImageButton
+                android:id="@+id/saveButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/save_changes"
+                android:src="@drawable/content_save" />
+
+            <ProgressBar
+                android:id="@+id/loadingPictograms"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+
+        </LinearLayout>
+        
+        <ListView
+        android:id="@+id/listView1"
+        android:layout_width="match_parent"	
+        android:layout_height="fill_parent" >
     </ListView>
+       
+    </LinearLayout>
+    
+    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:layout_width="0dp"
@@ -21,74 +57,90 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_gravity="right"
-            android:gravity="right" >
+            android:gravity="center" >
 
             <TextView
-                android:id="@+id/saveTextView"
+                android:id="@+id/TextView09"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/save_changes"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-            <ImageButton
-                android:id="@+id/saveButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/content_save"
-                android:contentDescription="@string/save_changes" />
+                android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/deleteTextView"
+                android:id="@+id/TextView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/delete"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <ImageButton
-                android:id="@+id/deleteButton"
+                android:id="@+id/ImageButton09"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/content_discard"
-                android:contentDescription="@string/delete" />
+                android:contentDescription="@string/delete"
+                android:src="@drawable/content_discard" />
 
             <TextView
-                android:id="@+id/cancelTextView"
+                android:id="@+id/TextView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/cancel"
+                android:text="@string/reset"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <ImageButton
-                android:id="@+id/cancelButton"
+                android:id="@+id/ImageButton07"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/navigation_cancel"
-                android:contentDescription="@string/cancel" />
+                android:contentDescription="@string/reset"
+                android:src="@drawable/navigation_cancel" />
 
             <TextView
-                android:id="@+id/helpTextView"
+                android:id="@+id/TextView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/help"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <ImageButton
-                android:id="@+id/helpButton"
+                android:id="@+id/ImageButton08"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/help"
                 android:gravity="right"
-                android:src="@drawable/action_help"
-                android:contentDescription="@string/help" />
-
+                android:src="@drawable/action_help" />
         </LinearLayout>
 
         <GridView
             android:id="@+id/searched_pictograms"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:numColumns="5" >
         </GridView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center" >
+
+            <TextView
+                android:id="@+id/TextView05"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/default_error_message"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/navigation_accept"
+                android:contentDescription="@string/picture" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -125,42 +177,88 @@
                 android:contentDescription="@string/search_button"
                 android:src="@drawable/ic_action_search" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/Kategori"
+		
+        <LinearLayout 
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            >
+            <Button
+            android:id="@+id/Kategori"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
             android:text="@string/kategori" />
 
-        <Button
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/collections_collection"
+                android:contentDescription="@string/picture" />
+        </LinearLayout>
+        
+		<LinearLayout
+	    	android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+		    
+		    <Button
             android:id="@+id/underKategori"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
             android:text="@string/subKategori" />
 
-        <Button
-            android:id="@+id/addExistingButton"
-            android:layout_width="match_parent"
+		    <ImageView
+		        android:id="@+id/imageView2"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:src="@drawable/collections_collection"
+		        android:contentDescription="@string/picture" />
+		</LinearLayout>
+        
+		<LinearLayout
+		    android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+		    
+		    <Button
+            android:id="@+id/addExistingButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/add_existing_pictogram" />
 
-        <Button
-            android:id="@+id/Title"
-            android:layout_width="match_parent"
+		    <ImageView
+		        android:id="@+id/imageView3"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:src="@drawable/content_new_picture"
+		        android:contentDescription="@string/picture" />
+		</LinearLayout>
+        
+		<LinearLayout
+		    android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+		    
+		    <Button
+            android:id="@+id/Title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/create_new_pictogram" />
+
+		    <ImageView
+		        android:id="@+id/imageView4"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:src="@drawable/device_access_camera"
+		        android:contentDescription="@string/picture" />
+
+		</LinearLayout>
+        
     </LinearLayout>
 
 </LinearLayout>
