--- a/source/workspace/PARROT/res/layout/activity_setting.xml
+++ b/source/workspace/PARROT/res/layout/activity_setting.xml
@@ -2,13 +2,120 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="40dp"
     tools:context=".SettingActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world" />
+    <LinearLayout
+        android:id="@+id/numberLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/sentenceSetting"
+          	android:textSize="40sp"
+			android:textColor="#ffffff"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/sentensboardOptions" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/changesentencecolor"
+                android:textSize="20sp"
+				android:textColor="#ffffff"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/changesentencecolor" />
+
+            <Button
+                android:id="@+id/buttonChangeSentenceColor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:background="@drawable/button"
+                android:radius="7dp"
+                android:text="@string/buttonChangeColorSentence"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/alignChoseForNoInSentenceBoard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/pickNoSentenceBoard"
+                android:textSize="20sp"
+				android:textColor="#ffffff"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/SentenceboardNo" />
+
+            <Spinner
+                android:id="@+id/spinnerNoOfsentence"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/pictogramSetting"
+            android:textSize="40sp"
+			android:textColor="#ffffff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="271dp"
+            android:text="@string/pictogramOptions" />
+
+        <RadioGroup
+            android:id="@+id/radioGroupSizePictogram"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/pictogramSize"
+                android:textSize="20sp"
+				android:textColor="#ffffff"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="40dp"
+                android:layout_weight="0.91"
+                android:text="@string/PictoSize" />
+
+            <RadioButton
+                android:id="@+id/mediumPicRadioButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.53"
+                android:text="@string/LargePictogram"
+                android:textSize="20sp" />
+
+            <RadioButton
+                android:id="@+id/largePicRadioButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="5.14"
+                android:text="@string/MediumPictogram"
+                android:textSize="20sp" />
+        </RadioGroup>
+
+        <CheckBox
+            android:id="@+id/checkBox1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:text="@string/textToPic"
+            android:textSize="20sp" />
+    </LinearLayout>
 
 </RelativeLayout>
