--- a/source/workspace/PARROT/res/layout/speechboard_layout.xml
+++ b/source/workspace/PARROT/res/layout/speechboard_layout.xml
@@ -34,7 +34,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:contentDescription="@string/picture"
-            android:src="@drawable/action_settings" />
+            android:src="@drawable/action_settings"
+            android:onClick="goToSettings" />
 
     </LinearLayout>
 
