--- a/source/workspace/PARROT/res/menu/activity_setting.xml
+++ b/source/workspace/PARROT/res/menu/activity_setting.xml
@@ -1,9 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_settings"
+        android:id="@+id/goToParrot"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/menu_settings"/>
+        android:title="@string/returnItem"
+        />
 
 </menu>
