Added layout to handle categories

--- a/source/workspace/PictoAdmin/res/layout/activity_admin_category.xml
+++ b/source/workspace/PictoAdmin/res/layout/activity_admin_category.xml
@@ -1,7 +1,208 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:orientation="vertical"
     tools:context=".AdminCategory" >
 
-</RelativeLayout>
+    <LinearLayout
+        android:id="@+id/description_bar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" >
+
+        <TextView
+            android:id="@+id/DescriptionText"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="Aktivt barn: "
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/currentChildName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="name of child, that is currently being edited"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/main_category_admin_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.90"
+        android:baselineAligned="false" >
+
+        <LinearLayout
+            android:id="@+id/category_columb"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginRight="5dp"
+            android:orientation="vertical" >
+
+            
+            <TextView
+                    android:id="@+id/category_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Kategorier"
+                    android:layout_gravity="center"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right" >
+
+                <ImageButton
+                    android:id="@+id/add_new_category_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/content_new"
+                    android:contentDescription="@string/picture" />
+
+                <ImageButton
+                    android:id="@+id/delete_selected_category_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/content_discard"
+                    android:contentDescription="@string/picture" />
+
+            </LinearLayout>
+
+            <GridView
+                android:id="@+id/category_gridview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:numColumns="1"
+                android:background="@drawable/sentenceboardlayout" >
+            </GridView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/subcategory_coloumb"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginRight="5dp"
+            android:orientation="vertical" >
+
+            
+            <TextView
+                android:id="@+id/subcategory_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Subkategorier"
+                android:layout_gravity="center"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right" >
+
+                <ImageButton
+                    android:id="@+id/add_new_subcategory_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/content_new"
+                    android:contentDescription="@string/picture" />
+
+                <ImageButton
+                    android:id="@+id/delete_selected_subcategory_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/content_discard"
+                    android:contentDescription="@string/picture" />
+
+            </LinearLayout>
+
+            <GridView
+                android:id="@+id/subcategory_gridview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:numColumns="1"
+                android:background="@drawable/sentenceboardlayout" >
+            </GridView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/pictogram_coloumb"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="5.00"
+            android:orientation="vertical" >
+            
+            <TextView
+                    android:id="@+id/pictogram_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Pictogrammer"
+                    android:layout_gravity="center"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right" >
+
+                <ImageButton
+                    android:id="@+id/access_pictocreator_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/device_access_camera"
+                    android:contentDescription="@string/picture" />
+
+                <ImageButton
+                    android:id="@+id/add_new_picture_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/content_new_picture"
+                    android:contentDescription="@string/picture" />
+
+                <ImageButton
+                    android:id="@+id/delete_selected_picture_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/content_discard"
+                    android:contentDescription="@string/picture" />
+
+            </LinearLayout>
+
+            <GridView
+                android:id="@+id/pictogram_gridview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:numColumns="6"
+                android:background="@drawable/sentenceboardlayout" >
+            </GridView>
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/tip_error_bar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center" >
+
+        <TextView
+            android:id="@+id/tip_error_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tip/Error messages"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <ImageView
+            android:id="@+id/tip_error_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/action_about"
+            android:contentDescription="@string/picture" />
+
+    </LinearLayout>
+
+</LinearLayout>
