--- a/source/workspace/PARROT/res/layout/pictogramview.xml
+++ b/source/workspace/PARROT/res/layout/pictogramview.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="145dp"
-    android:layout_height="165dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/pictogrambitmap"
         android:layout_width="145dp"
         android:layout_height="145dp"
+        android:listSelector="@color/cell_empty"
         android:layout_marginBottom="3dp"/>
-    
+
 
     <TextView
         android:id="@+id/pictogramtext"
